[gd_scene load_steps=4 format=3 uid="uid://clajxda20r6a"]

[ext_resource type="Theme" uid="uid://c2t3ird2a5evn" path="res://resource/themes/GameTheme.tres" id="1_knod4"]
[ext_resource type="Script" path="res://scripts/ui/upgrade_panel.gd" id="2_awg7d"]
[ext_resource type="PackedScene" uid="uid://dx3pxn6mjholb" path="res://scenes/upgrade_widget.tscn" id="3_3gkut"]

[node name="UpgradePanel" type="Panel"]
offset_right = 250.0
offset_bottom = 400.0
mouse_filter = 2
theme = ExtResource("1_knod4")
script = ExtResource("2_awg7d")

[node name="TowerUpgradeMenuLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 10.0
offset_right = 225.0
offset_bottom = 35.0
text = "Tower Upgrade Menu"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 220.0
offset_bottom = 360.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TowerSpecificUpgradePanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -247.0
offset_top = 75.0
offset_right = 3.0
offset_bottom = 325.0
mouse_filter = 2

[node name="UpgradePanelTowerName" type="Label" parent="TowerSpecificUpgradePanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 25.0
offset_top = 5.0
offset_right = 225.0
offset_bottom = 28.0
text = "DA NAME"
horizontal_alignment = 1

[node name="DamageWidget" parent="TowerSpecificUpgradePanel" instance=ExtResource("3_3gkut")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = 34.0
offset_right = -240.0
offset_bottom = -216.0

[node name="AttackSpeedWidget" parent="TowerSpecificUpgradePanel" instance=ExtResource("3_3gkut")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = 74.0
offset_right = -240.0
offset_bottom = -176.0
upgrade_type = 1

[node name="RangeWidget" parent="TowerSpecificUpgradePanel" instance=ExtResource("3_3gkut")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = 114.0
offset_right = -240.0
offset_bottom = -136.0
upgrade_type = 3

[node name="TierWidget" parent="TowerSpecificUpgradePanel" instance=ExtResource("3_3gkut")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 10.0
offset_top = 154.0
offset_right = -240.0
offset_bottom = -96.0

[node name="ClosePanel" type="Button" parent="TowerSpecificUpgradePanel"]
layout_mode = 0
offset_left = 217.0
offset_top = 6.0
offset_right = 244.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 16
text = "X"

[connection signal="pressed" from="TowerSpecificUpgradePanel/ClosePanel" to="." method="_on_close_panel_pressed"]
